# koecast

./: .gitignore  README.md  devenv.nix  justfile
client/: Cargo.toml  config.toml.example  index.html  overlay.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
client/protocol/: Cargo.toml
client/protocol/src/: lib.rs
client/protocol/tests/: contract.rs
client/src/: App.svelte  Overlay.svelte  overlay.js
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: audio.rs  config.rs  hotkey.rs  inject.rs  lib.rs  main.rs  overlay.rs  ws.rs
client/src-tauri/tests/: contract.rs
docs/: client-setup.md  dictation-gateway-protocol-v1.md  monorepo-design.md  stage6-4a-test-checklist.md  stage6-implementation-plan.md  stage6-readiness.md
protocol/examples/: error.json  error_with_segment.json  final.json  formatted.json  partial.json  ping.json  ready.json  session_end.json  start.json  start_min.json  stop.json
protocol/schema/: client-to-server.schema.json  server-to-client.schema.json
server/: Dockerfile  pyproject.toml
server/deploy/: docker-compose.yml  riva-nim.compose.yml
server/src/dictation_gateway/: __main__.py  config.py  llm.py  protocol.py  riva_bridge.py  server.py
server/tests/: test_contract.py  test_llm.py  test_riva_bridge.py
server/tests/manual/: smoke.py
