[project]
name = "dictation-gateway"
version = "0.1.0"
description = "Riva ベースの WebSocket dictation ゲートウェイ"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictation_gateway"]

[dependency-groups]
dev = [
    "pytest>=8",
    "jsonschema>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
