[package]
name = "koecast-protocol"
version = "0.1.0"
description = "Dictation Gateway WebSocket プロトコル v1 の serde 型定義"
edition = "2021"
rust-version = "1.77"

# tauri 非依存を維持すること。`docs/stage6-readiness.md` §5 の主旨。

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
jsonschema = "0.33.0"
