[package]
name = "koecast-client"
version = "0.1.0"
description = "koecast dictation client (Tauri)"
edition = "2021"
rust-version = "1.77"

# protocol 型は別クレート koecast-protocol に切り出し済み (段階6-1)。
# 契約テストはそちらにあり、本クレートは Tauri OS 依存を巻き込んだ状態の
# まま OK。just test-shared は -p koecast-protocol で本クレートを除外して回す
# (docs/stage6-implementation-plan.md §1.4)。

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
koecast-protocol = { path = "../protocol" }
