[package]
name = "koecast-client"
version = "0.1.0"
description = "koecast dictation client (Tauri)"
edition = "2021"
rust-version = "1.77"

# protocol 型は別クレート koecast-protocol に切り出し済み (段階6-1)。
# 契約テストはそちらにあり、本クレートは Tauri OS 依存を巻き込んだ状態の
# まま OK。just test-shared は -p koecast-protocol で本クレートを除外して回す
# (docs/stage6-implementation-plan.md §1.4)。

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
koecast-protocol = { path = "../protocol" }

# 段階6-3-b: WebSocket クライアント + 設定読み込み + 接続状態通知
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# 段階6-3-c: マイク取得 + リサンプリング + global hotkey
cpal = "0.17"
rubato = "0.16"  # 3.x は async API 中心の刷新でリアルタイム入力には 0.16 系が扱いやすい
tauri-plugin-global-shortcut = "2"

# 段階6-3-e: クリップボード退避 → ペースト (Cmd+V) → 復元
arboard = "3"
enigo = "0.6"
